# RuVector

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: ci.yml  hailo-backend-audit.yml
crates/mcp-brain-server/src/: pipeline.rs  routes.rs  symbolic.rs
crates/mcp-brain-server/static/: index.html
crates/neural-trader-strategies/: Cargo.toml
crates/neural-trader-strategies/src/: attention_scalper.rs  lib.rs
crates/ruvector-attn-mincut/: README.md
crates/ruvector-bench/tests/: wasm_stack_bench.rs
crates/ruvector-cli/src/: main.rs
crates/ruvector-coherence/: README.md
crates/ruvector-decompiler/examples/: run_on_cli.rs
crates/ruvector-gnn/: Cargo.toml
crates/ruvector-graph/src/: graph.rs  storage.rs
crates/ruvector-graph/tests/: edge_tests.rs
crates/ruvector-hailo-cluster/: Cargo.toml  README.md
crates/ruvector-hailo-cluster/deploy/: ruvector-hailo.env.example  ruvector-mmwave-bridge.env.example  ruview-csi-bridge.env.example  ruvllm-bridge.env.example
crates/ruvector-hailo-cluster/proto/: embedding.proto
crates/ruvector-hailo-cluster/src/: grpc_transport.rs  health.rs  lib.rs  transport.rs
crates/ruvector-hailo-cluster/tests/: bench_cli.rs  mmwave_bridge_cli.rs  ruview_csi_bridge_cli.rs  ruvllm_bridge_cli.rs
crates/ruvector-hailo/src/: device.rs  hef_pipeline.rs  (+3 more)
crates/ruvector-kalshi/: Cargo.toml
crates/ruvector-profiler/: README.md
crates/ruvector-rabitq/: BENCHMARK.md
crates/ruvector-rulake/: BENCHMARK.md  Cargo.toml
crates/ruvector-rulake/src/: backend.rs  cache.rs  lake.rs  lib.rs
crates/ruvector-rulake/tests/: federation_smoke.rs
crates/ruvector-solver/: Cargo.toml  README.md
crates/ruvector-solver-node/: Cargo.toml
crates/ruvector-solver-wasm/: Cargo.toml
crates/sona/: Cargo.toml
data/training/: brain_corpus.jsonl  corpus_stats.json
docs/adr/: ADR-123-brain-cognitive-enrichment.md  ADR-129-ruvltra-gcloud-training-turboquant.md  ADR-155-rulake-datalake-layer.md  ADR-156-rulake-as-memory-substrate.md  ADR-176-hef-integration-epic.md  ADR-178-ruvector-ruview-hailo-integration-gap-analysis.md
examples/edge-net/: Cargo.toml  README.md
(+34 files in other folders)
